Added Admin Controller, fixed irrelevant DTO usecases, fixed SIGNIN & SIGNUP pages.